Добавлено редактирование сообщения